# fdvar

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  test.yml
advection/: advection_sc4dvar_aaorf.py  advection_sc4dvar_pyadj.py  advection_wc4dvar_aaorf.py  advection_wc4dvar_aaorf_tao.py  advection_wc4dvar_covariancemat.py  advection_wc4dvar_pyadj.py  advection_wc4dvar_saddlepc.py
burgers/: aaorf_4dvar.py  burgers_simple.py  burgers_simple_sc4dvar.py  burgers_simple_sc4dvar_dirichlet.py  burgers_simple_sc4dvar_dirichlet_irk.py  burgers_simple_wc4dvar.py  burgers_wc4dvar_demo.py
checks/: aaorf_ksp.py  correlation_ksp.py
correlations/: advection_correlation_diffusion.py  advection_hessian_mfe.py  advection_hessian_mfe2.py  advection_sc4dvar.py  advection_sc4dvar_periodic.py  advection_wc4dvar.py  advection_wc4dvar_auxiliarypc.py  advection_wc4dvar_auxpc.py  advection_wc4dvar_periodic.py  burgers.py  burgers_correlation_diffusion.py  burgers_sc4dvar.py  burgers_sc4dvar_dirichlet.py  burgers_wc4dvar.py  burgers_wc4dvar_basic.py  diffusion_operator.py  hdiv_ip.py  normalisation.py
correlations/checks/: normalisation.py
correlations/logs/: schur_Linv.out
demos/: advection.py  advection_irk.py  advection_sc4dvar.py  advection_sc4dvar.py.bak  advection_wc4dvar.py  burgers_sc4dvar.py  burgers_wc4dvar.py
docs/: Makefile
docs/source/: conf.py  (+1 more)
fdvar/: __init__.py  allatonce_reduced_functional.py  correlations.py  correlations_orig.py  generate_data.py  mat.py  options.py  pc.py  saddle.py  sc4dvar_reduced_functional.py  tao_solver.py  wc4dvar_reduced_functional.py
swe/: swe.py  swe_sc4dvar.py
tao/: is_mpi.py  is_seq.py  mat_nest_mpi.py  mat_nest_seq.py  rfmat_rectangular.py  rfmat_square.py
tests/: conftest.py  test_reduced_functional.py
(+22 files in other folders)
