[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fdvar"
version = "2026.1"
authors = [
   {name = "Josh Hope-Collins", email = "joshua.hope-collins13@imperial.ac.uk"},
]
description = "4DVar data assimilation methods using Firedrake"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
   "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/firedrakeproject/fdvar.git"

[tool.setuptools.packages.find]
include = [
   "fdvar*",
]

[project.optional-dependencies]
docs = [
  "bibtexparser",
  "matplotlib",  # needed to resolve API
  "numpydoc",
  "pylit",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-reredirects",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-jquery",
  "sphinxcontrib-svg2pdfconverter",
  "sphinxcontrib-youtube",
  "sphinx_bootstrap_theme",
  "sphinx_design",
  "sphinx-copybutton",
]
